ultros/static/main.css
@font-face {
  font-family: Jaldi;
  font-weight: regular;
  src: url('Jaldi-Regular.ttf');
  font-display: swap;
}

@font-face {
  font-family: Jaldi-Bold;
  font-weight: bold;
  src: url('Jaldi-Bold.ttf');
  font-display: swap;
}

@font-face {
  font-family: Pacifico-Regular;
  font-weight: regular;
  src: url("Pacifico-Regular.ttf");
  font-display: swap;
}

a {
  color: #3B2B9E;
  transition: color .25s;
}

a:hover {
  color: #fff;
  transition: color .25s;
}

body {
  background-image: url('/static/images/flower_4.webp');
  background-size: 500px;
  background-position: top;

  color: #fff;
  font-family: Jaldi, sans-serif;
  opacity: 1;
  margin: 0px;
  background-color: #000;
  background-position: 0px;
  max-width: 100vw;
  min-height: 100vh;
}

@keyframes fadeInAnimation {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.gradient-outer {
  position: absolute;
  width: 100%;
  height: 110vh;
  margin: -20px 0px;
  z-index: -500;
  overflow: hidden;
}
.gradient {
  background: linear-gradient(black 100px, transparent 50%);
  position: relative;
  width: 100%;
  height: 110%;
  left: 0px;
  top: 0px;
  opacity: 1.0;
  z-index: -10000;
}

.header {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  flex-wrap: wrap;
  padding: 10px;
  padding-top: 20px;
  height: 16vh;
}

.btn {
  margin: 10px 15px;
  border: solid #3B2B9E 2px;
  border-radius: 5px;
  font-size: 1.2em;
  font-family: Jaldi, sans-serif;
  width: 100px;
  color: #3A2B7E;
  background-color: #18003470;
  color: #fff;
  margin: 5px;
}

.btn:hover {
  background-color: #0f0a28;
  border-color: #281f66;
  transition: 0.3s;
  transition-property: background-color, box-shadow;
  box-shadow: inset 0px 0px 0px 2px #00000023;
  color: #000;
  text-decoration: none;
}

.main-content .btn {
  color: #fff;
  background-color: #18003470;
}

input.btn {
  color: #fff;
  background-color: #18003470;
  padding: 0px;
}

nav > a {
  color: #fff;
  margin: 5px;
  text-decoration: none;
  font-size: large;
  height: 36px;
  text-align: center;
  display: flex;
  align-items: center;
  justify-content: center;
  transition: .25s;
}

nav > a > * {
  padding: 5px;
}

.nav-item:hover {
  color: #846D8F;
  transition: .25s;
}

.hero-title {
  margin-top: 15%;
  margin-left: 10%;
  text-shadow: -5px -5px 10px #000;
  font-size: 76px;
  margin-bottom: 10%;
  font-family: 'Pacifico-Regular';
}

.hero-title::before {
  content: '';
  position: fixed;
  top: 0px;
  bottom: 0px;
  left: 0px;
  right: 0px;
  background: rgba(0,0,0,0.5);
  
  z-index: -1;
}

.search-container {
  align-items: top;
  position: relative;
  height: 52px;
}

.search-box {
  width: 336px;
  height: 36px;
  border-radius: 4px;
  margin: 5px;
  padding: 0px 10px;
  border: 1px;
  flex-direction: column;
  font-family: inherit;
  font-size: large;
  color: #fff;
  background-color: #18003470;
  border: solid grey 2px;
  transition: .5s 0s cubic-bezier(0.075, 0.82, 0.165, 1) background-color;
}

.search-box:hover {
  background-color: #44304daa;
  transition: .5s 0s cubic-bezier(0.075, 0.82, 0.165, 1) background-color;
}

.search-box.active {
  background-color: #48394F;
  transition: .5s 0s cubic-bezier(0.075, 0.82, 0.165, 1) background-color;
}

.search-box.active ~ .search-results {
  visibility: visible;
  opacity: 1.0;
  animation: search-open .25s cubic-bezier(0.76, 0, 0.24, 1) 0s 1;
}

.search-results {
  background-color: #281A2DED;
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 500px;
  width: 356px;
  position: relative;
  visibility: hidden;
  overflow-y: scroll;
  overflow-x: hidden;
  opacity: 0.0;
  z-index: 100;
}

@keyframes search-open {
  0% {
    height: 0px;
  }
  100% {
    height: 500px;
  }
}


.search-result {
  display: flex;
  text-align: left;
  justify-content: left;
  align-items: center;
  top: 40px;
  width: 344px;
  height: 40px;
  background-color: rgba(0, 0, 0, 0.22);
  border-radius: 5px;
  margin: 5px;
  animation-name: search-result-in;
  animation-duration: 300ms;
}

.search-result :hover {
  background-color: rgba(0, 0, 0, 0.1);
  transition: background-color 1s;
}

@keyframes search-result-in {
  from {opacity: 0.0;}
  to {opacity: 1.0;}
}

.search-result a {
  flex-direction: row;
  display: flex;
  color: #fff;
  text-decoration: none;
  padding: 2.5px;
}

.search-result-details {
  display: flex;
  flex-direction: column;
  align-items: left;
  justify-content: center;
}

.search-result img {
  height: 40px;
  width: 40px;
  margin: 5px;
}

.item-name {
  font-size: 16px;
  margin-top: -10px;
  text-align: left;
}

.item-type {
  font-size: 11px;
  text-align: left;
  margin-bottom: -10px;
}

.container .search-result {
  width: unset;
  height: unset;
  padding: 10px;
}

.container .item-name {
  font-size: 36px;
}

.container .item-type {
  font-size: 26px;
}

.container .search-result img {
  height: 80px;
  width: 80px;
}

.avatar {
  width: 36px;
  height: 36px;
  border-radius: 36px;
  padding: 5px;
}

.container {
  margin-left: 10px;
  margin-right: 10px;
  margin-bottom: -10px;
  min-height: 84vh;
}

.content-nav {
  font-size: 20px;
  margin-left: 25px;
  display: flex;
  flex-wrap: wrap;
}

.world-button {
  border-radius: 1px;
  background-color: #100817;
  border: solid #3B2B9E 0px;
  color: #5b5461;
  text-decoration: none;
  padding: 5px;
  transition: 1s;
}

.focus > .world-button,
.world-row:focus > .world-button,
.world-row:hover > .world-button {
  color: rgb(154, 154, 154);
  transition: .5s;
}

.world-button.active {
  color: #fff;
  background-color: #150e1b;
}

.datacenter {
  color: rgb(151, 79, 151);
}


.world-row.focus,
.world-row:focus,
.world-row:focus-within,
.world-row:hover {
  display: flex;
  flex-direction: row;
}

.world-row {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  background-color: #100817;
}

.world-row:last-of-type {
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
}

.world-button:hover,
.world-button:focus {
  color: #fff !important;
}

.btn-secondary {
  background-color: #48394F;
  color: #fff;
  border-top-left-radius: 11px;
  border-top-right-radius: 11px;
  padding-right: 10px; 
  padding-left: 10px;
  text-decoration: none;
  border: 1px solid #000;
  text-align: center;
}

.btn-secondary > * {
  padding: 5px;
}

.btn-secondary:hover {
  background-color: #312537;
  transition: background-color .5s;
}

.btn-secondary.active {
  background-color: #171518;
}

.main-content {
  background-color: #100A12ED;
  backdrop-filter: blur(5px);
  padding: 2em;
  border-top-left-radius: 25px;
  border-top-right-radius: 25px;
  min-height: 90vh;
  
  opacity: 1;
}

.flex-wrap {
  display: flex;
  flex-flow: wrap;
}

.flex-row {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}

.flex {
  display: flex;
}

.flex-space {
  justify-content: space-between;
}

.flex-end {
  justify-content: end;
}

.flex-start-align {
  align-items:flex-start;
}

.flex-column {
  display: flex;
  flex-direction: column;
}

.flex-center {
  align-items: center;
}

.column-pad {
  column-gap: 10px;
}

.main-content table {
  white-space: nowrap;
  text-align: left;
  position: relative;
  border-collapse: collapse;
  min-width: 700px;
}

.main-content td {
  padding-left: 5px;
  padding-right: 10px;
  font-size: 1.1em;
}

.width-limited-text {
  text-overflow: ellipsis;
  overflow: hidden;
  padding-left: 10px;
  display: inline-block;
  word-break: break-all;
  margin-bottom: -15px;
  max-width: 500px;
}

.main-content a {
  color: #b996ca;
}

.main-content a:hover {
  color: #fff;
}

.content-well {
  margin: 15px;
  background-color: rgba(0, 0, 0, 0.08);
  border-radius: 8px;
}

.content-title {
  font-size: 26px;
}

.align-right {
  float: right;
  margin-top: 10px;
  margin-right: 10px;
}

.icon-small {
  width: 30px;
  height: 30px;
  margin: 0px 5px -7px -5px;
}

tr:nth-child(even) {
  background-color: #140F0F61; /* 38% */
}

tr:nth-child(odd) {
  background-color: #D4C7C70A;
}


::-webkit-scrollbar {
  width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  box-shadow: inset 0 0 5px #222; 
  border-radius: 10px;
}
 
/* Handle */
::-webkit-scrollbar-thumb {
  background: #3A2B7E; 
  border-radius: 10px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #846D8F; 
}

footer {
  padding-top: 45px;
  margin-top: -45px;
  background: linear-gradient(transparent, black 45px);
  width: 100vw;
  text-align: center;
}

.gil {
  text-decoration: wavy;
}

.gil img {
  height: 1.2em;
  margin-bottom: -.2em;
}

th {
  word-wrap: normal;
  height: 46px;
  position: sticky;
  top: 0px;
  background-color: #11051e;
  z-index: 5;
  min-width: 25px;
  padding-left: 10px;
  padding-right: 10px;
}

@media screen and (max-width: 1200px) {
  .content-well {
    overflow-x: scroll;
  }

  .main-content {
    padding: 10px 5px;
  }
}

@media screen and (max-width: 800px) {
  .container {
    margin-left: 0px;
    margin-right: 0px;
  }
}

.homeworld {
  background-color: #2a153c;
  color: #aaa;
}

.homeworld::before {
  content: '🏠';
}

input {
  border: solid #3B2B9E 2px;
  border-radius: 5px;
  font-size: 16px;
  font-family: Jaldi, sans-serif;
  width: 100px;
  color: #3A2B7E;
  background-color: #18003470;
  color: #fff;
  margin: 5px;
}

input[type=number] {
  appearance: textfield;
}

input[type=submit] {
  margin: 5px;
}

select {
  margin: 5px;
  border-radius: 8px;
  border: solid #3B2B9E;
  font-size: 16px;
  font-family: Jaldi, sans-serif;
  width: 240px;
  color: #fff;
  background-color: #18003470;
}

select option {
  background-color: #150824;
}

select optgroup {
  background-color: #150824;
}


.clipboard {
  margin:5px;
  background-color: #150e1b;
  transition-duration: .5s;
  transition-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
  transition-property: color;
}

.clipboard:hover {
  color: #ccc;
  transition-duration: .5s;
  transition-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
  transition-property: color;
}

.clipboard:active {
  color: #444;
  transition-duration: .5s;
  transition-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
  transition-property: color;
}

.tooltip {
  position: relative;
  display: inline-block;
  
}

.tooltip-text {
  background-color: rgba(10, 0, 14, 0.95);
  color: #fff;
  text-align: center;
  padding: 5px 0px;
  border-radius: 8px;
  position: absolute;
  z-index: 10;
  visibility: hidden;
  font-size: 16px;
  font-family: Jaldi, sans-serif;
  padding: 5px;
}

.tooltip .tooltip-text {
  bottom: 100%;
  left: 50%;
  min-width: 125px;
  margin-left: -100%;
}

.tooltip:hover .tooltip-text {
  visibility: visible;
  animation: fadeInAnimation cubic-bezier(0.11, 0, 0.5, 0) .25s;
}

.page-btn {
  border: solid #3B2B9E 2px;
  border-radius: 5px;
  background-color: #18003470;
  padding: 5px 5px;
  margin: 5px;
  min-width: 25px;
  text-align: center;
}


.page-btn.active {
  background-color: #111;
  color: #aaa;
}

.dropdown {
  position: relative;
  display: inline-block;
}

.dropdown-content {
  display: none;
  position: absolute;
  background-color: #160c1b;
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  padding: 10px 10px;
  z-index: 1;
}

.dropdown:hover .dropdown-content {
  display: block;
}

.drop-hint {
  background-color: #48394F;
  border: #fff solid 1px;
}

.drag-active {
  background-color: #b996ca;
}

.horizontal-scroll {
  overflow-x: scroll;
}

.profile-grid {
  display: grid;
  grid-template-areas: '1 1 2'
                       '1 1 3';
}

.flex-grow {
  flex-grow: 3;
}

